crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__custom_function_variant_with_multiplier_args.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C)]
struct Foo<'a>(pub crate::NormalOr<crate::StylesetFunction<'a>>);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
