crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__custom_type_with_checks_derive_parse.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo<'a> {
    #[atom(CssAtomSet::Foo)]
    Foo(crate::KeywordValue<'a, ::css_parse::T![Ident]>),
    LengthPercentage(
        crate::CalcableValue<'a, crate::NonNegative<crate::LengthPercentage>>,
    ),
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
