crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__enum_keyword_group_list.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
#[derive(
    ::csskit_derives::Parse,
    ::csskit_derives::Peek,
    ::csskit_derives::ToCursors,
    ::csskit_derives::ToSpan,
    ::csskit_derives::SemanticEq,
    ::csskit_derives::NodeWithMetadata,
    Debug,
    Clone,
    PartialEq,
    Eq,
    PartialOrd,
    Ord,
    Hash
)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
#[cfg_attr(feature = "visitable", derive(::csskit_derives::Visitable), visit(skip))]
pub enum FooKeywords<'a> {}
#[cfg(test)]
::stable_type_layout::register!(FooKeywords < 'static >);
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C)]
struct Foo<'a>(
    pub Option<
        ::css_parse::Vec<
            'a,
            (crate::KeywordValue<'a, ::css_parse::T![Ident]>, ::css_parse::T![,]),
        >,
    >,
    #[atom(CssAtomSet::Bar)]
    pub FooKeywords<'a>,
);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
