crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__enum_keyword_group_with_nested_options.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo<'a> {
    #[parse(one_must_occur)]
    Foo {
        #[atom(CssAtomSet::Foo)]
        foo: Option<crate::KeywordValue<'a, ::css_parse::T![Ident]>>,
        #[atom(CssAtomSet::Baz)]
        baz: Option<crate::KeywordValue<'a, ::css_parse::T![Ident]>>,
        #[atom(CssAtomSet::Qux)]
        qux: Option<crate::KeywordValue<'a, ::css_parse::T![Ident]>>,
    },
    #[parse(one_must_occur)]
    Bar {
        #[atom(CssAtomSet::Bar)]
        bar: Option<crate::KeywordValue<'a, ::css_parse::T![Ident]>>,
        #[atom(CssAtomSet::Baz)]
        baz: Option<crate::KeywordValue<'a, ::css_parse::T![Ident]>>,
        #[atom(CssAtomSet::Qux)]
        qux: Option<crate::KeywordValue<'a, ::css_parse::T![Ident]>>,
    },
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
