crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__enum_with_group_keyword_or_type.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
enum Foo {
    #[atom(CssAtomSet::Auto)]
    Auto(::css_parse::T![Ident]),
    NormalOrSelfPosition(
        Option<crate::OverflowPosition>,
        ::css_parse::Or![::css_parse::T![Ident], crate ::SelfPosition],
    ),
    #[atom(CssAtomSet::Stretch)]
    Stretch(::css_parse::T![Ident]),
}
