crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__enum_with_keyword_group_in_options.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[repr(C, u8)]
enum Foo {
    #[atom(CssAtomSet::Nowrap)]
    Nowrap(::css_parse::T![Ident]),
    #[parse(one_must_occur)]
    Wrap {
        #[atom(CssAtomSet::Wrap)]
        wrap: Option<::css_parse::T![Ident]>,
        #[atom(CssAtomSet::Balance)]
        balance: Option<::css_parse::T![Ident]>,
    },
    #[parse(one_must_occur)]
    WrapReverse {
        #[atom(CssAtomSet::WrapReverse)]
        wrap_reverse: Option<::css_parse::T![Ident]>,
        #[atom(CssAtomSet::Balance)]
        balance: Option<::css_parse::T![Ident]>,
    },
}
#[cfg(test)]
::stable_type_layout::register!(Foo);
