crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__enum_with_keyword_options.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo {
    #[atom(CssAtomSet::None)]
    None(::css_parse::T![Ident]),
    #[parse(one_must_occur)]
    UnderlineOverlineLineThroughBlink {
        #[atom(CssAtomSet::Underline)]
        underline: Option<::css_parse::T![Ident]>,
        #[atom(CssAtomSet::Overline)]
        overline: Option<::css_parse::T![Ident]>,
        #[atom(CssAtomSet::LineThrough)]
        line_through: Option<::css_parse::T![Ident]>,
        #[atom(CssAtomSet::Blink)]
        blink: Option<::css_parse::T![Ident]>,
    },
    #[atom(CssAtomSet::SpellingError)]
    SpellingError(::css_parse::T![Ident]),
    #[atom(CssAtomSet::GrammarError)]
    GrammarError(::css_parse::T![Ident]),
}
#[cfg(test)]
::stable_type_layout::register!(Foo);
