crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__enum_with_type_only_options.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo<'a> {
    #[atom(CssAtomSet::None)]
    None(crate::KeywordValue<'a, ::css_parse::T![Ident]>),
    AnglePercentage(
        ::css_parse::Optionals![
            crate ::CalcableValue < 'a, crate ::Angle >, crate ::CalcableValue < 'a,
            crate ::Percentage >
        ],
    ),
    Length(crate::CalcableValue<'a, crate::Length>),
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
